# greg

./: .gitignore  Cargo.toml  README.md  build.sh  rust-toolchain
db/: demo.db
frontend/: .oxfmtrc.json  .oxlintrc.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: date.tsx  table-grid.module.css  table-grid.tsx
frontend/src/components/buttons/: buttons.module.css  index.tsx
frontend/src/components/roadmap/: index.tsx
frontend/src/query/: activity.ts  login.ts  roadmap.ts  sources.ts  types.ts  util.ts
frontend/src/routes/: __root.tsx  _app.tsx  _layout.activity.tsx  _layout.roadmap.$roadmap_id.tsx  _layout.roadmaps.tsx  _layout.sources.tsx  _layout.tsx  activity.tsx  index.tsx  sources.tsx
frontend/src/routes/_app/: rmap.tsx  rmap_.$roadmapId.tsx  roadmap.tsx  roadmap_.$roadmapId.tsx
frontend/src/stores/: processing.ts
src/: db.rs  lib.rs  main.rs  models.rs  types.rs  utils.rs
src/db/: mod.rs
src/queries/: mail.rs  mod.rs  roadmap.rs  sources.rs
src/routes/: deletes.rs  gets.rs  mod.rs  posts.rs
src/server/: mod.rs
src/server/auth/: mod.rs
src/server/auth/queries/: login.rs  mod.rs
src/server/auth/routes/: login.rs  logout.rs  mod.rs
src/server/auth/util/: mod.rs
src/server/db/: mod.rs  new_migration.rs
src/server/db/get/: mod.rs
src/server/db/migrations/: m_000001774527605_add_sources.rs  m_000001774528994_add_activities.rs  m_000001774529002_add_logins.rs  m_000001774529132_add_roadmap_activities.rs  m_000001774529138_add_roadmap_watched_tabs.rs  m_000001774529754_add_roadmap_cards.rs  m_000001774529762_add_roadmap_tabs.rs  m_000001774529775_add_roadmap_card_assigns.rs  m_000001774529780_add_roadmap_tab_assigns.rs  m_000001774529792_add_roadmap_changes.rs  m_000001774529798_handle_version.rs  mod.rs
src/server/db/tables/: mod.rs
src/server/db/types/: mod.rs
src/server/mail/: mod.rs
src/server/misc/: mod.rs
src/server/misc/routes/: keep_alive.rs  mod.rs
src/server/roadmap/: mod.rs
src/server/roadmap/queries/: activity.rs  changes.rs  mod.rs  roadmap.rs  tabs.rs
src/server/roadmap/routes/: activity.rs  changes.rs  mod.rs  recheck.rs  tabs.rs
src/server/roadmap/tasks/: mod.rs
src/server/roadmap/types/: changes.rs  db.rs  items.rs  mod.rs  roadmap.rs
src/server/roadmap/utils/: mod.rs
src/server/rss/: mod.rs
src/server/rss/queries/: activity.rs  mod.rs  (+1 more)
src/server/shared/: auth.rs  errors.rs  mod.rs  responses.rs  search_params.rs  timestamp.rs
src/tasks/: check_roadmap.rs  check_sources.rs  mod.rs
(+21 files in other folders)
