[package]
name = "greg"
version = "0.1.0"
edition = "2021"

[features]
scheduler = ["dep:tokio-cron-scheduler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-web-httpauth = "0.8.1"
actix-web-lab = { version = "0.20.2", features = ["spa"] }
anyhow = "1.0.79"
dotenvy = "0.15.7"
env_logger = "0.11.1"
feed-rs = "1.4.0"
libsql-client = "0.33.4"
log = "0.4.20"
reqwest = "0.11.24"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
time = { version = "0.3.34", features = ["serde"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.10.0", optional = true }
url = "2.5.0"
uuid = { version = "1.7.0", features = ["v4"] }
