[package]
name = "greg"
version = "0.1.0"
edition = "2021"

[features]
default = ["scheduler"]
scheduler = ["dep:tokio-cron-scheduler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
actix-web-httpauth = "0.8.2"
actix-web-lab = { version = "0.24.1", features = ["spa"] }
anyhow = "1.0.98"
dotenvy = "0.15.7"
env_logger = "0.11.8"
feed-rs = "1.4.0"
libsql-client = "0.33.4"
log = "0.4.27"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["serde"] }
tokio = { version = "1.45.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.10.0", optional = true }
url = "2.5.4"
uuid = { version = "1.16.0", features = ["v4"] }
